🚨 Fix linter warnings
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>